# LightGBM

./: meson.build  meson_options.txt
src/: meson.build
swig/: meson.build
